dist_pkgdata_DATA = \
  ALEPH_1991_S2435284.info \
  ALEPH_1996_S3486095.info \
  ALEPH_1996_S3196992.info \
  ALEPH_1999_S4193598.info \
  ALEPH_2001_S4656318.info \
  ALEPH_2002_S4823664.info \
  ALEPH_2004_S5765862.info \
  ALICE_2010_S8624100.info \
  ALICE_2010_S8625980.info \
  ALICE_2010_S8706239.info \
  ALICE_2011_S8909580.info \
  ALICE_2011_S8945144.info \
  ALICE_2012_I1181770.info \
  ALICE_2015_I1357424.info \
  ALICE_2014_I1300380.info \
  ARGUS_1993_S2653028.info \
  ARGUS_1993_S2669951.info \
  ARGUS_1993_S2789213.info \
  ATLAS_2010_S8591806.info \
  ATLAS_2010_S8817804.info \
  ATLAS_2010_S8894728.info \
  ATLAS_2010_S8914702.info \
  ATLAS_2010_S8918562.info \
  ATLAS_2010_S8919674.info \
  ATLAS_2010_CONF_2010_049.info \
  ATLAS_2011_S8924791.info \
  ATLAS_2011_S8971293.info \
  ATLAS_2011_S8983313.info \
  ATLAS_2011_S8994773.info \
  ATLAS_2011_S9002537.info \
  ATLAS_2011_S9019561.info \
  ATLAS_2011_S9041966.info \
  ATLAS_2011_S9120807.info \
  ATLAS_2011_S9126244.info \
  ATLAS_2011_S9128077.info \
  ATLAS_2011_S9131140.info \
  ATLAS_2011_S9108483.info \
  ATLAS_2011_S9212183.info \
  ATLAS_2011_I894867.info \
  ATLAS_2011_I921594.info \
  ATLAS_2011_I928289_W.info \
  ATLAS_2011_I928289_Z.info \
  ATLAS_2011_I930220.info \
  ATLAS_2011_S9035664.info \
  ATLAS_2011_I919017.info \
  ATLAS_2011_I925932.info \
  ATLAS_2011_I926145.info \
  ATLAS_2011_I944826.info \
  ATLAS_2011_I945498.info \
  ATLAS_2011_I954993.info \
  ATLAS_2011_S9225137.info \
  ATLAS_2011_S9212353.info \
  ATLAS_2011_CONF_2011_090.info \
  ATLAS_2011_CONF_2011_098.info \
  ATLAS_2012_I943401.info \
  ATLAS_2012_I946427.info \
  ATLAS_2012_I1083318.info \
  ATLAS_2012_I1082936.info \
  ATLAS_2012_I1084540.info \
  ATLAS_2012_I1093734.info \
  ATLAS_2012_I1093738.info \
  ATLAS_2012_I1094061.info \
  ATLAS_2012_I1094564.info \
  ATLAS_2012_I1094568.info \
  ATLAS_2012_I1095236.info \
  ATLAS_2012_I1082009.info \
  ATLAS_2012_I1091481.info \
  ATLAS_2012_I1119557.info \
  ATLAS_2012_I1124167.info \
  ATLAS_2012_I1125575.info \
  ATLAS_2012_I1183818.info \
  ATLAS_2012_I1188891.info \
  ATLAS_2012_I1112263.info \
  ATLAS_2012_I1125961.info \
  ATLAS_2012_I1126136.info \
  ATLAS_2012_I1117704.info \
  ATLAS_2012_I1118269.info \
  ATLAS_2012_I1180197.info \
  ATLAS_2012_I1186556.info \
  ATLAS_2012_I1190891.info \
  ATLAS_2012_I1199269.info \
  ATLAS_2012_I1203852.info \
  ATLAS_2012_I1204447.info \
  ATLAS_2012_I1204784.info \
  ATLAS_2012_CONF_2012_001.info \
  ATLAS_2012_CONF_2012_103.info \
  ATLAS_2012_CONF_2012_104.info \
  ATLAS_2012_CONF_2012_105.info \
  ATLAS_2012_CONF_2012_109.info \
  ATLAS_2012_CONF_2012_153.info \
  ATLAS_2013_I1190187.info \
  ATLAS_2013_I1217863_W.info \
  ATLAS_2013_I1217863_W_EL.info \
  ATLAS_2013_I1217863_W_MU.info \
  ATLAS_2013_I1217863_Z.info \
  ATLAS_2013_I1217863_Z_EL.info \
  ATLAS_2013_I1217863_Z_MU.info \
  ATLAS_2013_I1217867.info \
  ATLAS_2013_I1219109.info \
  ATLAS_2013_I1219109_EL.info \
  ATLAS_2013_I1219109_MU.info \
  ATLAS_2013_I1230812.info \
  ATLAS_2013_I1230812_EL.info \
  ATLAS_2013_I1230812_MU.info \
  ATLAS_2013_I1243871.info \
  ATLAS_2013_I1263495.info \
  ATLAS_2014_I1268975.info \
  ATLAS_2014_I1279489.info \
  ATLAS_2014_I1282441.info \
  ATLAS_2014_I1298811.info \
  ATLAS_2014_I1304688.info \
  ATLAS_2014_I1307756.info \
  ATLAS_2014_I1306294.info \
  ATLAS_2014_I1306294_EL.info \
  ATLAS_2014_I1306294_MU.info \
  ATLAS_2014_I1315949.info \
  ATLAS_2014_I1325553.info \
  ATLAS_2014_I1300647.info \
  ATLAS_2014_I1288706.info \
  ATLAS_2014_I1307243.info \
  ATLAS_2014_I1312627.info \
  ATLAS_2014_I1312627_EL.info \
  ATLAS_2014_I1312627_MU.info \
  ATLAS_2014_I1306615.info \
  ATLAS_2015_I1364361.info \
  ATLAS_2015_I1345452.info \
  ATLAS_2015_I1351916.info \
  ATLAS_2015_I1351916_EL.info \
  ATLAS_2015_I1351916_MU.info \
  ATLAS_2013_I1216670.info \
  ATLAS_2013_I1244522.info \
  ATLAS_2014_I1282447.info \
  ATLAS_2014_I1298023.info \
  ATLAS_2014_I1319490.info \
  ATLAS_2014_I1319490_EL.info \
  ATLAS_2014_I1319490_MU.info \
  ATLAS_2014_I1326641.info \
  ATLAS_2014_I1327229.info \
  ATLAS_2015_I1387176.info \
  ATLAS_2015_CONF_2015_041.info \
  ATLAS_2015_CONF_2015_041_EL.info \
  ATLAS_2015_CONF_2015_041_MU.info \
  ATLAS_2015_I1376945.info \
  ATLAS_2015_I1390114.info \
  ATLAS_2015_I1394679.info \
  ATLAS_2015_I1397635.info \
  ATLAS_2015_I1397637.info \
  ATLAS_2015_I1408516.info \
  ATLAS_2015_I1408516_EL.info \
  ATLAS_2015_I1408516_MU.info \
  ATLAS_2016_I1419652.info \
  ATLAS_2016_I1424838.info \
  ATLAS_2016_I1457605.info \
  ATLAS_2016_I1468168.info \
  BABAR_2003_I593379.info \
  BABAR_2005_S6181155.info \
  BABAR_2007_S6895344.info \
  BABAR_2007_S7266081.info \
  BELLE_2008_I786560.info \
  BABAR_2013_I1238276.info \
  BELLE_2001_S4598261.info \
  BELLE_2013_I1216515.info \
  CDF_1988_S1865951.info \
  CDF_1990_S2089246.info \
  CDF_1993_S2742446.info \
  CDF_1994_S2952106.info \
  CDF_1996_S3108457.info \
  CDF_1996_S3349578.info \
  CDF_1996_S3418421.info \
  CDF_1997_S3541940.info \
  CDF_1998_S3618439.info \
  CDF_2000_S4155203.info \
  CDF_2000_S4266730.info \
  CDF_2001_S4517016.info \
  CDF_2001_S4563131.info \
  CDF_2001_S4751469.info \
  CDF_2002_S4796047.info \
  CDF_2004_S5839831.info \
  CDF_2005_S6080774.info \
  CDF_2005_S6217184.info \
  CDF_2006_S6450792.info \
  CDF_2006_S6653332.info \
  CDF_2007_S7057202.info \
  CDF_2008_S7540469.info \
  CDF_2008_S7541902.info \
  CDF_2008_S7782535.info \
  CDF_2008_S7828950.info \
  CDF_2008_S8093652.info \
  CDF_2008_S8095620.info \
  CDF_2009_S8233977.info \
  CDF_2009_NOTE_9936.info \
  CDF_2009_S8383952.info \
  CDF_2009_S8436959.info \
  CDF_2010_S8591881_DY.info \
  CDF_2010_S8591881_QCD.info \
  CDF_2012_NOTE10874.info \
  CDF_2012_I1124333.info \
  CLEO_2004_S5809304.info\
  CMS_2010_S8547297.info \
  CMS_2010_S8656010.info \
  CMS_2011_S8884919.info \
  CMS_2011_S9215166.info \
  CMS_2012_I941555.info \
  CMS_2011_I954992.info \
  CMS_2011_S8941262.info \
  CMS_2011_S8950903.info \
  CMS_2011_S8957746.info \
  CMS_2011_S8968497.info \
  CMS_2011_S8973270.info \
  CMS_2011_S8978280.info \
  CMS_2011_S9086218.info \
  CMS_2011_S9088458.info \
  CMS_2011_S9120041.info \
  CMS_2012_I1087342.info \
  CMS_2012_I1090423.info \
  CMS_2012_I1102908.info \
  CMS_2012_I1107658.info \
  CMS_2012_I1184941.info \
  CMS_2012_I1193338.info \
  CMS_2013_I1122847.info \
  CMS_2013_I1208923.info \
  CMS_2013_I1209721.info \
  CMS_2013_I1218372.info \
  CMS_2013_I1224539_DIJET.info \
  CMS_2013_I1224539_WJET.info \
  CMS_2013_I1224539_ZJET.info \
  CMS_2013_I1256943.info \
  CMS_2013_I1258128.info \
  CMS_2013_I1261026.info \
  CMS_2013_I1265659.info \
  CMS_2013_I1272853.info \
  CMS_2013_I1273574.info \
  CMS_2014_I1298810.info \
  CMS_2014_I1303894.info \
  CMS_2014_I1305624.info \
  CMS_2015_I1310737.info \
  CMS_2015_I1327224.info \
  CMS_2015_I1346843.info \
  CMS_2015_I1356998.info \
  CMS_2015_I1370682.info \
  CMS_2015_I1384119.info \
  CMS_2015_I1385107.info \
  CMSTOTEM_2014_I1294140.info \
  CMS_2012_PAS_QCD_11_010.info \
  CMS_QCD_10_024.info \
  D0_1996_S3214044.info \
  D0_1996_S3324664.info \
  D0_2000_S4480767.info \
  D0_2000_I499943.info  \
  D0_2001_S4674421.info \
  D0_2004_S5992206.info \
  D0_2006_S6438750.info \
  D0_2007_S7075677.info \
  D0_2008_S6879055.info \
  D0_2008_S7554427.info \
  D0_2008_S7662670.info \
  D0_2008_S7719523.info \
  D0_2008_S7837160.info \
  D0_2008_S7863608.info \
  D0_2009_S8202443.info \
  D0_2009_S8320160.info \
  D0_2009_S8349509.info \
  D0_2010_S8566488.info \
  D0_2010_S8570965.info \
  D0_2010_S8671338.info \
  D0_2010_S8821313.info \
  D0_2011_I895662.info \
  D0_2015_I1324946.info \
  D0_2000_I503361.info \
  E735_1998_S3905616.info \
  DELPHI_1995_S3137023.info \
  DELPHI_1996_S3430090.info \
  DELPHI_1999_S3960137.info \
  DELPHI_2000_S4328825.info \
  DELPHI_2002_069_CONF_603.info \
  DELPHI_2011_I890503.info \
  EXAMPLE.info \
  EXAMPLE_CUTS.info \
  EXAMPLE_SMEAR.info \
  H1_1994_S2919893.info \
  H1_1995_S3167097.info \
  H1_2000_S4129130.info \
  JADE_OPAL_2000_S4300807.info \
  JADE_1998_S3612880.info \
  LHCB_2010_S8758301.info \
  LHCB_2010_I867355.info \
  LHCB_2011_I917009.info \
  LHCB_2011_I919315.info \
  LHCB_2012_I1119400.info \
  LHCB_2012_I1208102.info \
  LHCB_2013_I1208105.info \
  LHCB_2013_I1218996.info \
  LHCB_2014_I1281685.info \
  LHCB_2015_I1333223.info \
  LHCF_2012_I1115479.info \
  MC_DIPHOTON.info \
  MC_ELECTRONS.info \
  MC_GENERIC.info \
  MC_HFJETS.info \
  MC_HINC.info \
  MC_HJETS.info \
  MC_HHJETS.info \
  MC_HKTSPLITTINGS.info \
  MC_IDENTIFIED.info \
  MC_JETS.info \
  MC_JETTAGS.info \
  MC_KTSPLITTINGS.info \
  MC_LEADJETUE.info \
  MC_MET.info \
  MC_MUONS.info \
  MC_PDFS.info \
  MC_PHOTONINC.info \
  MC_PHOTONJETS.info \
  MC_PHOTONKTSPLITTINGS.info \
  MC_PHOTONS.info \
  MC_PRINTEVENT.info \
  MC_QCD_PARTONS.info \
  MC_SUSY.info \
  MC_TAUS.info \
  MC_TTBAR.info \
  MC_VH2BB.info \
  MC_WINC.info \
  MC_WINC_EL.info \
  MC_WINC_MU.info \
  MC_WINC_EL_BARE.info \
  MC_WINC_MU_BARE.info \
  MC_WJETS.info \
  MC_WJETS_EL.info \
  MC_WJETS_MU.info \
  MC_WJETS_EL_BARE.info \
  MC_WJETS_MU_BARE.info \
  MC_WKTSPLITTINGS.info \
  MC_WPOL.info \
  MC_WWINC.info \
  MC_WWJETS.info \
  MC_WWKTSPLITTINGS.info \
  MC_XS.info \
  MC_ZINC.info \
  MC_ZINC_EL.info \
  MC_ZINC_MU.info \
  MC_ZINC_EL_BARE.info \
  MC_ZINC_MU_BARE.info \
  MC_ZJETS.info \
  MC_ZJETS_EL.info \
  MC_ZJETS_MU.info \
  MC_ZJETS_EL_BARE.info \
  MC_ZJETS_MU_BARE.info \
  MC_ZKTSPLITTINGS.info \
  MC_ZZINC.info \
  MC_ZZJETS.info \
  MC_ZZKTSPLITTINGS.info \
  OPAL_1993_S2692198.info \
  OPAL_1994_S2927284.info \
  OPAL_1995_S3198391.info \
  OPAL_1996_S3257789.info \
  OPAL_1997_S3396100.info \
  OPAL_1997_S3608263.info \
  OPAL_1998_S3702294.info \
  OPAL_1998_S3780481.info \
  OPAL_1998_S3749908.info \
  OPAL_2000_S4418603.info \
  OPAL_2001_S4553896.info \
  OPAL_2002_S5361494.info \
  OPAL_2004_S6132243.info \
  PDG_HADRON_MULTIPLICITIES.info \
  PDG_HADRON_MULTIPLICITIES_RATIOS.info \
  PDG_TAUS.info \
  SFM_1984_S1178091.info \
  SLD_1996_S3398250.info \
  SLD_1999_S3743934.info \
  SLD_2002_S4869273.info \
  SLD_2004_S5693039.info \
  STAR_2006_S6500200.info \
  STAR_2006_S6860818.info \
  STAR_2006_S6870392.info \
  STAR_2008_S7869363.info \
  STAR_2008_S7993412.info \
  STAR_2009_UE_HELEN.info \
  TASSO_1990_S2148048.info \
  TOTEM_2012_I1115294.info \
  TOTEM_2012_I1220862.info \
  TOTEM_2014_I1328627.info \
  ZEUS_2001_S4815815.info \
  UA1_1990_S2044935.info \
  UA5_1982_S875503.info \
  UA5_1986_S1583476.info \
  UA5_1987_S1640666.info \
  UA5_1988_S1867512.info \
  UA5_1989_S1926373.info
