dist_pkgdata_DATA = \
  ALEPH_1991_S2435284.plot \
  ALEPH_1996_S3486095.plot \
  ALEPH_1996_S3196992.plot \
  ALEPH_1999_S4193598.plot \
  ALEPH_2001_S4656318.plot \
  ALEPH_2002_S4823664.plot \
  ALEPH_2004_S5765862.plot \
  ALICE_2010_S8624100.plot \
  ALICE_2010_S8625980.plot \
  ALICE_2010_S8706239.plot \
  ALICE_2011_S8909580.plot \
  ALICE_2011_S8945144.plot \
  ALICE_2012_I1181770.plot \
  ALICE_2014_I1300380.plot \
  ALICE_2015_I1357424.plot \
  ARGUS_1993_S2653028.plot \
  ARGUS_1993_S2669951.plot \
  ARGUS_1993_S2789213.plot \
  ATLAS_2010_S8591806.plot \
  ATLAS_2010_S8817804.plot \
  ATLAS_2010_S8894728.plot \
  ATLAS_2010_S8914702.plot \
  ATLAS_2010_S8918562.plot \
  ATLAS_2010_S8919674.plot \
  ATLAS_2010_CONF_2010_049.plot \
  ATLAS_2011_S8924791.plot \
  ATLAS_2011_S8971293.plot \
  ATLAS_2011_S8994773.plot \
  ATLAS_2011_S9002537.plot \
  ATLAS_2011_S9035664.plot \
  ATLAS_2011_S9120807.plot \
  ATLAS_2011_S9126244.plot \
  ATLAS_2011_S9128077.plot \
  ATLAS_2011_S9131140.plot \
  ATLAS_2011_I894867.plot  \
  ATLAS_2011_I919017.plot  \
  ATLAS_2011_I921594.plot  \
  ATLAS_2011_I928289_W.plot \
  ATLAS_2011_I928289_Z.plot \
  ATLAS_2011_I925932.plot  \
  ATLAS_2011_I926145.plot  \
  ATLAS_2011_I930220.plot  \
  ATLAS_2011_I944826.plot  \
  ATLAS_2011_I945498.plot  \
  ATLAS_2011_I954993.plot  \
  ATLAS_2011_S9225137.plot \
  ATLAS_2011_S9212183.plot \
  ATLAS_2011_S8983313.plot \
  ATLAS_2011_S9212353.plot \
  ATLAS_2011_CONF_2011_090.plot \
  ATLAS_2011_CONF_2011_098.plot \
  ATLAS_2012_I1082936.plot \
  ATLAS_2012_I1083318.plot \
  ATLAS_2012_I1084540.plot \
  ATLAS_2012_I1091481.plot \
  ATLAS_2012_I1093734.plot \
  ATLAS_2012_I1093738.plot \
  ATLAS_2012_I1094061.plot \
  ATLAS_2012_I1094564.plot \
  ATLAS_2012_I1094568.plot \
  ATLAS_2012_I1095236.plot \
  ATLAS_2012_I943401.plot \
  ATLAS_2012_I946427.plot \
  ATLAS_2012_I1119557.plot \
  ATLAS_2012_I1124167.plot \
  ATLAS_2012_I1125575.plot \
  ATLAS_2012_I1112263.plot \
  ATLAS_2012_I1125961.plot \
  ATLAS_2012_I1126136.plot \
  ATLAS_2012_I1117704.plot \
  ATLAS_2012_I1118269.plot \
  ATLAS_2012_I1180197.plot \
  ATLAS_2012_I1082009.plot \
  ATLAS_2012_I1183818.plot \
  ATLAS_2012_I1188891.plot \
  ATLAS_2012_I1186556.plot \
  ATLAS_2012_I1190891.plot \
  ATLAS_2012_I1199269.plot \
  ATLAS_2012_I1203852.plot \
  ATLAS_2012_I1204447.plot \
  ATLAS_2012_I1204784.plot \
  ATLAS_2012_CONF_2012_001.plot \
  ATLAS_2012_CONF_2012_103.plot \
  ATLAS_2012_CONF_2012_104.plot \
  ATLAS_2012_CONF_2012_105.plot \
  ATLAS_2012_CONF_2012_109.plot \
  ATLAS_2012_CONF_2012_153.plot \
  ATLAS_2013_I1190187.plot \
  ATLAS_2013_I1219109.plot \
  ATLAS_2013_I1219109_EL.plot \
  ATLAS_2013_I1219109_MU.plot \
  ATLAS_2013_I1217863_W.plot \
  ATLAS_2013_I1217863_W_EL.plot \
  ATLAS_2013_I1217863_W_MU.plot \
  ATLAS_2013_I1217863_Z.plot \
  ATLAS_2013_I1217863_Z_EL.plot \
  ATLAS_2013_I1217863_Z_MU.plot \
  ATLAS_2013_I1217867.plot \
  ATLAS_2013_I1216670.plot \
  ATLAS_2013_I1230812.plot \
  ATLAS_2013_I1230812_EL.plot \
  ATLAS_2013_I1230812_MU.plot \
  ATLAS_2013_I1243871.plot \
  ATLAS_2013_I1244522.plot \
  ATLAS_2013_I1263495.plot \
  ATLAS_2014_I1268975.plot \
  ATLAS_2014_I1279489.plot \
  ATLAS_2014_I1282441.plot \
  ATLAS_2014_I1298811.plot \
  ATLAS_2014_I1304688.plot \
  ATLAS_2014_I1307756.plot \
  ATLAS_2014_I1306294.plot \
  ATLAS_2014_I1306294_EL.plot \
  ATLAS_2014_I1306294_MU.plot \
  ATLAS_2014_I1315949.plot \
  ATLAS_2014_I1325553.plot \
  ATLAS_2014_I1300647.plot \
  ATLAS_2014_I1288706.plot \
  ATLAS_2014_I1307243.plot \
  ATLAS_2014_I1312627.plot \
  ATLAS_2014_I1312627_EL.plot \
  ATLAS_2014_I1312627_MU.plot \
  ATLAS_2014_I1306615.plot \
  ATLAS_2014_I1282447.plot \
  ATLAS_2014_I1298023.plot \
  ATLAS_2014_I1319490.plot \
  ATLAS_2014_I1319490_EL.plot \
  ATLAS_2014_I1319490_MU.plot \
  ATLAS_2014_I1326641.plot \
  ATLAS_2014_I1327229.plot \
  ATLAS_2015_I1387176.plot \
  ATLAS_2015_I1364361.plot \
  ATLAS_2015_I1351916.plot \
  ATLAS_2015_I1351916_EL.plot \
  ATLAS_2015_I1351916_MU.plot \
  ATLAS_2015_I1345452.plot \
  ATLAS_2015_I1376945.plot \
  ATLAS_2015_I1390114.plot \
  ATLAS_2015_I1394679.plot \
  ATLAS_2015_I1397637.plot \
  ATLAS_2015_I1397635.plot \
  ATLAS_2015_CONF_2015_041.plot \
  ATLAS_2015_CONF_2015_041_EL.plot \
  ATLAS_2015_CONF_2015_041_MU.plot \
  ATLAS_2015_I1408516.plot \
  ATLAS_2015_I1408516_EL.plot \
  ATLAS_2015_I1408516_MU.plot \
  ATLAS_2016_I1419652.plot \
  ATLAS_2016_I1424838.plot \
  ATLAS_2016_I1457605.plot \
  ATLAS_2016_I1468168.plot \
  BABAR_2003_I593379.plot \
  BABAR_2005_S6181155.plot \
  BABAR_2007_S6895344.plot \
  BABAR_2007_S7266081.plot \
  BABAR_2013_I1238276.plot \
  BELLE_2001_S4598261.plot \
  BELLE_2008_I786560.plot \
  BELLE_2013_I1216515.plot \
  CDF_1988_S1865951.plot \
  CDF_1990_S2089246.plot \
  CDF_1993_S2742446.plot \
  CDF_1994_S2952106.plot \
  CDF_1996_S3108457.plot \
  CDF_1996_S3349578.plot \
  CDF_1996_S3418421.plot \
  CDF_1997_S3541940.plot \
  CDF_1998_S3618439.plot \
  CDF_2000_S4155203.plot \
  CDF_2000_S4266730.plot \
  CDF_2001_S4517016.plot \
  CDF_2001_S4563131.plot \
  CDF_2001_S4751469.plot \
  CDF_2002_S4796047.plot \
  CDF_2004_S5839831.plot \
  CDF_2005_S6080774.plot \
  CDF_2005_S6217184.plot \
  CDF_2006_S6450792.plot \
  CDF_2006_S6653332.plot \
  CDF_2007_S7057202.plot \
  CDF_2008_S7540469.plot \
  CDF_2008_S7541902.plot \
  CDF_2008_S7782535.plot \
  CDF_2008_S7828950.plot \
  CDF_2008_S8093652.plot \
  CDF_2008_S8095620.plot \
  CDF_2009_S8233977.plot \
  CDF_2009_NOTE_9936.plot \
  CDF_2009_S8383952.plot \
  CDF_2009_S8436959.plot \
  CDF_2010_S8591881_DY.plot \
  CDF_2010_S8591881_QCD.plot \
  CDF_2012_NOTE10874.plot \
  CDF_2012_I1124333.plot \
  CLEO_2004_S5809304.plot \
  CMS_2010_S8547297.plot \
  CMS_2010_S8656010.plot \
  CMS_2011_S8884919.plot \
  CMS_2011_S8941262.plot \
  CMS_2011_S8950903.plot \
  CMS_2011_S8957746.plot \
  CMS_2011_S8968497.plot \
  CMS_2011_S8973270.plot \
  CMS_2011_S8978280.plot \
  CMS_2011_S9086218.plot \
  CMS_2011_S9088458.plot \
  CMS_2011_S9120041.plot \
  CMS_2011_S9215166.plot \
  CMS_2012_I941555.plot \
  CMS_2011_I954992.plot \
  CMS_2012_I1087342.plot \
  CMS_2012_I1090423.plot \
  CMS_2012_I1102908.plot \
  CMS_2012_I1107658.plot \
  CMS_2012_I1184941.plot \
  CMS_2012_I1193338.plot \
  CMS_2013_I1122847.plot \
  CMS_2013_I1208923.plot \
  CMS_2013_I1209721.plot \
  CMS_2013_I1218372.plot \
  CMS_2013_I1224539_DIJET.plot \
  CMS_2013_I1224539_WJET.plot \
  CMS_2013_I1224539_ZJET.plot \
  CMS_2013_I1256943.plot \
  CMS_2013_I1258128.plot \
  CMS_2013_I1261026.plot \
  CMS_2013_I1265659.plot \
  CMS_2013_I1272853.plot \
  CMS_2013_I1273574.plot \
  CMS_2014_I1298810.plot \
  CMS_2014_I1303894.plot \
  CMS_2014_I1305624.plot \
  CMS_2015_I1310737.plot \
  CMS_2015_I1327224.plot \
  CMS_2015_I1346843.plot \
  CMS_2015_I1356998.plot \
  CMS_2015_I1370682.plot \
  CMS_2015_I1384119.plot \
  CMS_2015_I1385107.plot \
  CMS_2012_PAS_QCD_11_010.plot \
  CMS_QCD_10_024.plot \
  CMSTOTEM_2014_I1294140.plot \
  TOTEM_2014_I1328627.plot \
  D0_1996_S3214044.plot \
  D0_1996_S3324664.plot \
  D0_2000_S4480767.plot \
  D0_2000_I499943.plot \
  D0_2001_S4674421.plot \
  D0_2004_S5992206.plot \
  D0_2006_S6438750.plot \
  D0_2007_S7075677.plot \
  D0_2008_S6879055.plot \
  D0_2008_S7554427.plot \
  D0_2008_S7662670.plot \
  D0_2008_S7719523.plot \
  D0_2008_S7837160.plot \
  D0_2008_S7863608.plot \
  D0_2009_S8202443.plot \
  D0_2009_S8320160.plot \
  D0_2009_S8349509.plot \
  D0_2010_S8566488.plot \
  D0_2010_S8570965.plot \
  D0_2010_S8671338.plot \
  D0_2010_S8821313.plot \
  D0_2011_I895662.plot \
  D0_2015_I1324946.plot \
  D0_2000_I503361.plot \
  E735_1998_S3905616.plot \
  DELPHI_1995_S3137023.plot \
  DELPHI_1996_S3430090.plot \
  DELPHI_1999_S3960137.plot \
  DELPHI_2000_S4328825.plot \
  DELPHI_2002_069_CONF_603.plot \
  EXAMPLE.plot \
  H1_1994_S2919893.plot \
  H1_1995_S3167097.plot \
  H1_2000_S4129130.plot \
  JADE_OPAL_2000_S4300807.plot \
  JADE_1998_S3612880.plot \
  LHCB_2010_S8758301.plot \
  LHCB_2010_I867355.plot \
  LHCB_2011_I917009.plot \
  LHCB_2011_I919315.plot \
  LHCB_2012_I1119400.plot \
  LHCB_2012_I1208102.plot \
  LHCB_2013_I1208105.plot \
  LHCB_2013_I1218996.plot \
  LHCB_2014_I1281685.plot \
  LHCB_2015_I1333223.plot \
  LHCF_2012_I1115479.plot \
  MC_DIJET.plot \
  MC_DIPHOTON.plot \
  MC_ELECTRONS.plot \
  MC_GENERIC.plot \
  MC_HFJETS.plot \
  MC_HINC.plot \
  MC_HJETS.plot \
  MC_HHJETS.plot \
  MC_HKTSPLITTINGS.plot \
  MC_IDENTIFIED.plot \
  MC_JETS.plot \
  MC_JETTAGS.plot \
  MC_KTSPLITTINGS.plot \
  MC_LEADJETUE.plot \
  MC_MUONS.plot \
  MC_PDFS.plot \
  MC_PHOTONINC.plot \
  MC_PHOTONJETS.plot \
  MC_PHOTONKTSPLITTINGS.plot \
  MC_PHOTONS.plot \
  MC_QCD_PARTONS.plot \
  MC_SUSY.plot \
  MC_TAUS.plot \
  MC_TTBAR.plot \
  MC_VH2BB.plot \
  MC_WINC.plot \
  MC_WINC_EL.plot \
  MC_WINC_MU.plot \
  MC_WINC_EL_BARE.plot \
  MC_WINC_MU_BARE.plot \
  MC_WJETS.plot \
  MC_WJETS_EL.plot \
  MC_WJETS_MU.plot \
  MC_WJETS_EL_BARE.plot \
  MC_WJETS_MU_BARE.plot \
  MC_WKTSPLITTINGS.plot \
  MC_WPOL.plot \
  MC_WWINC.plot \
  MC_WWJETS.plot \
  MC_WWKTSPLITTINGS.plot \
  MC_XS.plot \
  MC_ZINC.plot \
  MC_ZINC_EL.plot \
  MC_ZINC_MU.plot \
  MC_ZINC_EL_BARE.plot \
  MC_ZINC_MU_BARE.plot \
  MC_ZJETS.plot \
  MC_ZJETS_EL.plot \
  MC_ZJETS_MU.plot \
  MC_ZJETS_EL_BARE.plot \
  MC_ZJETS_MU_BARE.plot \
  MC_ZKTSPLITTINGS.plot \
  MC_ZZINC.plot \
  MC_ZZJETS.plot \
  MC_ZZKTSPLITTINGS.plot \
  OPAL_1993_S2692198.plot \
  OPAL_1994_S2927284.plot \
  OPAL_1995_S3198391.plot \
  OPAL_1996_S3257789.plot \
  OPAL_1997_S3396100.plot \
  OPAL_1997_S3608263.plot \
  OPAL_1998_S3702294.plot \
  OPAL_1998_S3749908.plot \
  OPAL_1998_S3780481.plot \
  OPAL_2000_S4418603.plot \
  OPAL_2001_S4553896.plot \
  OPAL_2002_S5361494.plot \
  OPAL_2004_S6132243.plot \
  PDG_HADRON_MULTIPLICITIES.plot \
  PDG_HADRON_MULTIPLICITIES_RATIOS.plot \
  PDG_TAUS.plot \
  SFM_1984_S1178091.plot \
  SLD_1996_S3398250.plot \
  SLD_1999_S3743934.plot \
  SLD_2002_S4869273.plot \
  SLD_2004_S5693039.plot \
  STAR_2006_S6500200.plot \
  STAR_2006_S6860818.plot \
  STAR_2006_S6870392.plot \
  STAR_2008_S7869363.plot \
  STAR_2008_S7993412.plot \
  STAR_2009_UE_HELEN.plot \
  TASSO_1990_S2148048.plot \
  TOTEM_2012_I1115294.plot \
  TOTEM_2012_002.plot \
  ZEUS_2001_S4815815.plot \
  UA1_1990_S2044935.plot \
  UA5_1982_S875503.plot \
  UA5_1986_S1583476.plot \
  UA5_1987_S1640666.plot \
  UA5_1988_S1867512.plot \
  UA5_1989_S1926373.plot
