dist_pkgdata_DATA = \
  ALEPH_1991_S2435284.yoda \
  ALEPH_1996_S3486095.yoda \
  ALEPH_1996_S3196992.yoda \
  ALEPH_1999_S4193598.yoda \
  ALEPH_2001_S4656318.yoda \
  ALEPH_2002_S4823664.yoda \
  ALEPH_2004_S5765862.yoda \
  ALICE_2010_S8624100.yoda \
  ALICE_2010_S8625980.yoda \
  ALICE_2010_S8706239.yoda \
  ALICE_2011_S8909580.yoda \
  ALICE_2011_S8945144.yoda \
  ALICE_2012_I1181770.yoda \
  ARGUS_1993_S2653028.yoda \
  ARGUS_1993_S2669951.yoda \
  ARGUS_1993_S2789213.yoda \
  ATLAS_2010_S8591806.yoda \
  ATLAS_2010_S8817804.yoda \
  ATLAS_2010_S8894728.yoda \
  ATLAS_2010_S8914702.yoda \
  ATLAS_2010_S8918562.yoda \
  ATLAS_2010_S8919674.yoda \
  ATLAS_2011_S8924791.yoda \
  ATLAS_2011_S8971293.yoda \
  ATLAS_2011_S8994773.yoda \
  ATLAS_2011_S9002537.yoda \
  ATLAS_2010_CONF_2010_049.yoda \
  ATLAS_2011_S9120807.yoda \
  ATLAS_2011_S9126244.yoda \
  ATLAS_2011_S9128077.yoda \
  ATLAS_2011_S9131140.yoda \
  ATLAS_2011_I894867.yoda \
  ATLAS_2011_S9035664.yoda \
  ATLAS_2011_I919017.yoda \
  ATLAS_2011_I921594.yoda \
  ATLAS_2011_I925932.yoda \
  ATLAS_2011_I926145.yoda \
  ATLAS_2011_I930220.yoda \
  ATLAS_2011_I944826.yoda \
  ATLAS_2011_I945498.yoda \
  ATLAS_2011_I954993.yoda \
  ATLAS_2011_S9225137.yoda \
  ATLAS_2011_S9212183.yoda \
  ATLAS_2012_I1082936.yoda \
  ATLAS_2012_I1083318.yoda \
  ATLAS_2012_I1084540.yoda \
  ATLAS_2012_I1091481.yoda \
  ATLAS_2012_I1093734.yoda \
  ATLAS_2012_I1093738.yoda \
  ATLAS_2012_I1094061.yoda \
  ATLAS_2012_I1094564.yoda \
  ATLAS_2012_I1094568.yoda \
  ATLAS_2012_I943401.yoda \
  ATLAS_2012_I1082009.yoda \
  ATLAS_2012_I1118269.yoda \
  ATLAS_2012_I1119557.yoda \
  ATLAS_2012_I1124167.yoda \
  ATLAS_2012_I1125575.yoda \
  ATLAS_2012_I1183818.yoda \
  ATLAS_2012_I1188891.yoda \
  ATLAS_2012_I1199269.yoda \
  ATLAS_2012_CONF_2012_001.yoda \
  ATLAS_2012_I1203852.yoda \
  ATLAS_2012_I1204784.yoda \
  ATLAS_2013_I1190187.yoda \
  ATLAS_2013_I1217867.yoda \
  ATLAS_2013_I1219109.yoda \
  ATLAS_2013_I1219109_EL.yoda \
  ATLAS_2013_I1219109_MU.yoda \
  ATLAS_2013_I1230812.yoda \
  ATLAS_2013_I1230812_EL.yoda \
  ATLAS_2013_I1230812_MU.yoda \
  ATLAS_2013_I1243871.yoda \
  ATLAS_2013_I1263495.yoda \
  ATLAS_2014_I1268975.yoda \
  ATLAS_2014_I1279489.yoda \
  ATLAS_2014_I1282441.yoda \
  ATLAS_2014_I1298811.yoda \
  ATLAS_2014_I1304688.yoda \
  ATLAS_2014_I1307756.yoda \
  ATLAS_2014_I1306294.yoda \
  ATLAS_2014_I1306294_EL.yoda \
  ATLAS_2014_I1306294_MU.yoda \
  ATLAS_2014_I1315949.yoda \
  ATLAS_2014_I1325553.yoda \
  ATLAS_2014_I1300647.yoda \
  ATLAS_2014_I1288706.yoda \
  ATLAS_2014_I1307243.yoda \
  ATLAS_2014_I1312627.yoda \
  ATLAS_2014_I1312627_EL.yoda \
  ATLAS_2014_I1312627_MU.yoda \
  ATLAS_2014_I1306615.yoda \
  BABAR_2003_I593379.yoda \
  BABAR_2005_S6181155.yoda \
  BABAR_2006_S6511112.yoda \
  BABAR_2007_S6895344.yoda \
  BABAR_2007_S7266081.yoda \
  BELLE_2001_S4598261.yoda \
  BELLE_2008_I786560.yoda \
  BELLE_2013_I1216515.yoda \
  BABAR_2013_I1238276.yoda \
  CLEO_2001_S4557530.yoda \
  CLEO_2004_S5809304.yoda \
  CMS_2010_S8547297.yoda \
  CMS_2010_S8656010.yoda \
  CMS_2011_S8884919.yoda \
  CMS_2011_S8941262.yoda \
  CMS_2011_S8950903.yoda \
  CMS_2011_S8957746.yoda \
  CMS_2011_S8968497.yoda \
  CMS_2011_S8973270.yoda \
  CMS_2011_S8978280.yoda \
  CMS_2011_S9086218.yoda \
  CMS_2011_S9088458.yoda \
  CMS_2011_S9120041.yoda \
  CMS_2011_S9215166.yoda \
  CMS_2012_I941555.yoda \
  CMS_2011_I954992.yoda \
  CMS_2012_I1087342.yoda \
  CMS_2012_I1090423.yoda \
  CMS_2012_I1102908.yoda \
  CMS_2012_I1107658.yoda \
  CMS_2012_I1184941.yoda \
  CMS_2012_I1193338.yoda \
  CMS_2013_I1209721.yoda \
  CMS_2013_I1218372.yoda \
  CMS_2013_I1224539_DIJET.yoda \
  CMS_2013_I1224539_WJET.yoda \
  CMS_2013_I1224539_ZJET.yoda \
  CMS_2013_I1256943.yoda \
  CMS_2013_I1258128.yoda \
  CMS_2013_I1261026.yoda \
  CMS_2013_I1265659.yoda \
  CMS_2013_I1272853.yoda \
  CMS_2013_I1273574.yoda \
  CMS_2014_I1298810.yoda \
  CMS_2014_I1303894.yoda \
  CMSTOTEM_2014_I1294140.yoda \
  CMS_2012_PAS_QCD_11_010.yoda \
  CMS_QCD_10_024.yoda \
  LHCB_2010_S8758301.yoda \
  LHCB_2010_I867355.yoda \
  LHCB_2011_I917009.yoda \
  LHCB_2011_I919315.yoda \
  LHCB_2012_I1119400.yoda \
  LHCB_2012_I1208102.yoda \
  LHCB_2013_I1208105.yoda \
  LHCB_2013_I1218996.yoda \
  LHCB_2014_I1281685.yoda \
  LHCF_2012_I1115479.yoda \
  DELPHI_1994_S3021912.yoda \
  DELPHI_1995_S3137023.yoda \
  DELPHI_1996_S3430090.yoda \
  DELPHI_1999_S3960137.yoda \
  DELPHI_2000_S4328825.yoda \
  DELPHI_2002_069_CONF_603.yoda \
  DELPHI_2003_WUD_03_11.yoda \
  OPAL_1993_S2692198.yoda \
  OPAL_1994_S2927284.yoda \
  OPAL_1995_S3198391.yoda \
  OPAL_1996_S3257789.yoda \
  OPAL_1997_S3396100.yoda \
  OPAL_1997_S3608263.yoda \
  OPAL_1998_S3702294.yoda \
  OPAL_1998_S3780481.yoda \
  OPAL_1998_S3749908.yoda \
  OPAL_2000_S4418603.yoda \
  OPAL_2001_S4553896.yoda \
  OPAL_2002_S5361494.yoda \
  OPAL_2004_S6132243.yoda \
  JADE_OPAL_2000_S4300807.yoda \
  JADE_1998_S3612880.yoda \
  TASSO_1990_S2148048.yoda \
  H1_1994_S2919893.yoda \
  H1_1995_S3167097.yoda \
  H1_2000_S4129130.yoda \
  H1_2007_S7223935.yoda \
  ZEUS_2001_S4815815.yoda \
  PHENIX_2003_S5538505.yoda \
  STAR_2006_S6500200.yoda \
  STAR_2006_S6860818.yoda \
  STAR_2006_S6870392.yoda \
  STAR_2008_S7993412.yoda \
  STAR_2009_UE_HELEN.yoda \
  BRAHMS_2007_S7052448.yoda \
  UA1_1990_S2044935.yoda \
  UA5_1982_S875503.yoda \
  UA5_1986_S1583476.yoda \
  UA5_1989_S1926373.yoda \
  UA5_1988_S1867512.yoda \
  UA5_1987_S1640666.yoda \
  CDF_1988_S1865951.yoda \
  CDF_1990_S2089246.yoda \
  CDF_1993_S2742446.yoda \
  CDF_1994_S2952106.yoda \
  CDF_1996_S3108457.yoda \
  CDF_1996_S3349578.yoda \
  CDF_1996_S3418421.yoda \
  CDF_1997_S3541940.yoda \
  CDF_1998_S3618439.yoda \
  CDF_2000_S4155203.yoda \
  CDF_2000_S4266730.yoda \
  CDF_2001_S4517016.yoda \
  CDF_2001_S4563131.yoda \
  CDF_2001_S4751469.yoda \
  CDF_2002_S4796047.yoda \
  CDF_2004_S5839831.yoda \
  CDF_2005_S6080774.yoda \
  CDF_2005_S6217184.yoda \
  CDF_2006_S6450792.yoda \
  CDF_2006_S6653332.yoda \
  CDF_2007_S7057202.yoda \
  CDF_2008_S7541902.yoda \
  CDF_2008_S7554427.yoda \
  CDF_2008_S7540469.yoda \
  CDF_2008_S7782535.yoda \
  CDF_2008_S7828950.yoda \
  CDF_2008_S8093652.yoda \
  CDF_2008_S8095620.yoda \
  CDF_2009_S8233977.yoda \
  CDF_2009_NOTE_9936.yoda \
  CDF_2009_S8383952.yoda \
  CDF_2009_S8436959.yoda \
  CDF_2010_S8591881_DY.yoda \
  CDF_2010_S8591881_QCD.yoda \
  CDF_2012_NOTE10874.yoda \
  D0_1996_S3214044.yoda \
  D0_1996_S3324664.yoda \
  D0_2000_S4480767.yoda \
  D0_2000_I499943.yoda \
  D0_2001_S4674421.yoda \
  D0_2004_S5992206.yoda \
  D0_2006_S6438750.yoda \
  D0_2007_S7075677.yoda \
  D0_2008_S6879055.yoda \
  D0_2008_S7554427.yoda \
  D0_2008_S7662670.yoda \
  D0_2008_S7719523.yoda \
  D0_2008_S7837160.yoda \
  D0_2008_S7863608.yoda \
  D0_2009_S8202443.yoda \
  D0_2009_S8320160.yoda \
  D0_2009_S8349509.yoda \
  D0_2010_S8566488.yoda \
  D0_2010_S8570965.yoda \
  D0_2010_S8671338.yoda \
  D0_2010_S8821313.yoda \
  D0_2011_I895662.yoda \
  E735_1992_S2485869.yoda \
  E735_1993_S2896508.yoda \
  E735_1998_S3905616.yoda \
  SFM_1984_S1178091.yoda \
  SLD_1996_S3398250.yoda \
  SLD_1999_S3743934.yoda \
  SLD_2002_S4869273.yoda \
  SLD_2004_S5693039.yoda \
  STAR_2008_S7869363.yoda \
  TOTEM_2012_I1115294.yoda \
  TOTEM_2012_002.yoda \
  PDG_HADRON_MULTIPLICITIES.yoda \
  PDG_HADRON_MULTIPLICITIES_RATIOS.yoda \
  PDG_TAUS.yoda
