
## Internal headers - not to be installed
nobase_dist_noinst_HEADERS =
## Public headers - to be installed
nobase_pkginclude_HEADERS =


## Rivet interface
nobase_pkginclude_HEADERS += \
  Rivet.hh \
  Run.hh \
  Event.hh \
  ParticleBase.hh \
  Particle.fhh Particle.hh \
  Jet.fhh Jet.hh \
  Projection.fhh Projection.hh \
  ProjectionApplier.hh \
  ProjectionHandler.hh \
  Analysis.hh \
  AnalysisHandler.hh \
  AnalysisInfo.hh \
  AnalysisBuilder.hh \
  AnalysisLoader.hh


## Build config stuff
nobase_pkginclude_HEADERS += \
  Config/RivetCommon.hh \
  Config/RivetConfig.hh

## Projections
nobase_pkginclude_HEADERS += \
  Projections/AliceCommon.hh \
  Projections/AxesDefinition.hh \
  Projections/Beam.hh \
  Projections/BeamThrust.hh \
  Projections/CentralEtHCM.hh \
  Projections/CentralityProjection.hh \
  Projections/ChargedFinalState.hh \
  Projections/ChargedLeptons.hh \
  Projections/ConstLossyFinalState.hh \
  Projections/DirectFinalState.hh \
  Projections/DISDiffHadron.hh \
  Projections/DISFinalState.hh \
  Projections/DISKinematics.hh \
  Projections/DISLepton.hh \
  Projections/DISRapidityGap.hh \
  Projections/DressedLeptons.hh \
  Projections/EventMixingFinalState.hh \
  Projections/FastJets.hh \
  Projections/PxConePlugin.hh \
  Projections/FinalPartons.hh \
  Projections/FinalState.hh \
  Projections/FParameter.hh \
  Projections/GammaGammaFinalState.hh \
  Projections/GammaGammaKinematics.hh \
  Projections/GammaGammaLeptons.hh \
  Projections/GeneratedPercentileProjection.hh \
  Projections/HadronicFinalState.hh \
  Projections/HeavyHadrons.hh \
  Projections/Hemispheres.hh \
  Projections/HepMCHeavyIon.hh \
  Projections/IdentifiedFinalState.hh \
  Projections/ImpactParameterProjection.hh \
  Projections/IndirectFinalState.hh \
  Projections/InitialQuarks.hh \
  Projections/InvMassFinalState.hh \
  Projections/JetAlg.hh \
  Projections/JetFinder.hh \
  Projections/JetShape.hh \
  Projections/LeadingParticlesFinalState.hh \
  Projections/LossyFinalState.hh \
  Projections/MergedFinalState.hh \
  Projections/METFinder.hh \
  Projections/MissingMomentum.hh \
  Projections/NeutralFinalState.hh \
  Projections/NonHadronicFinalState.hh \
  Projections/NonPromptFinalState.hh \
  Projections/ParisiTensor.hh \
  Projections/ParticleFinder.hh \
  Projections/PartonicTops.hh \
  Projections/PercentileProjection.hh \
  Projections/PrimaryHadrons.hh \
  Projections/PrimaryParticles.hh \
  Projections/PromptFinalState.hh \
  Projections/SingleValueProjection.hh \
  Projections/SmearedParticles.hh \
  Projections/SmearedJets.hh \
  Projections/SmearedMET.hh \
  Projections/Sphericity.hh \
  Projections/Spherocity.hh \
  Projections/TauFinder.hh \
  Projections/Thrust.hh \
  Projections/TriggerCDFRun0Run1.hh \
  Projections/TriggerCDFRun2.hh \
  Projections/TriggerProjection.hh \
  Projections/TriggerUA5.hh \
  Projections/UnstableFinalState.hh \
  Projections/UndressBeamLeptons.hh \
  Projections/UnstableParticles.hh \
  Projections/UserCentEstimate.hh \
  Projections/VetoedFinalState.hh \
  Projections/VisibleFinalState.hh \
  Projections/WFinder.hh \
  Projections/ZFinder.hh
## Meta-projection convenience headers
nobase_pkginclude_HEADERS +=   \
  Projections/FinalStates.hh \
  Projections/Smearing.hh


## Analysis base class headers
# TODO: Move to Rivet/AnalysisTools header dir?
nobase_pkginclude_HEADERS += \
  Analyses/MC_Cent_pPb.hh \
  Analyses/MC_ParticleAnalysis.hh \
  Analyses/MC_JetAnalysis.hh \
  Analyses/MC_JetSplittings.hh


## Tools
nobase_pkginclude_HEADERS += \
  Tools/AliceCommon.hh \
  Tools/AtlasCommon.hh \
  Tools/BeamConstraint.hh \
  Tools/BinnedHistogram.hh \
  Tools/CentralityBinner.hh \
  Tools/Cmp.fhh \
  Tools/Cmp.hh \
  Tools/Correlators.hh \
  Tools/Cutflow.hh \
  Tools/Cuts.fhh \
  Tools/Cuts.hh \
  Tools/Exceptions.hh \
  Tools/JetUtils.hh \
  Tools/Logging.hh  \
  Tools/MendelMin.hh  \
  Tools/Random.hh  \
  Tools/ParticleBaseUtils.hh \
  Tools/ParticleIdUtils.hh \
  Tools/ParticleUtils.hh \
  Tools/ParticleName.hh \
  Tools/Percentile.hh \
  Tools/PrettyPrint.hh \
  Tools/ReaderCompressedAscii.hh \
  Tools/RHICCommon.hh \
  Tools/RivetPaths.hh \
  Tools/RivetSTL.hh \
  Tools/RivetFastJet.hh \
  Tools/RivetHepMC.hh \
  Tools/RivetYODA.hh \
  Tools/RivetMT2.hh \
  Tools/SmearingFunctions.hh \
  Tools/MomentumSmearingFunctions.hh \
  Tools/ParticleSmearingFunctions.hh \
  Tools/JetSmearingFunctions.hh \
  Tools/TypeTraits.hh \
  Tools/WriterCompressedAscii.hh \
  Tools/Utils.hh

nobase_dist_noinst_HEADERS += \
  Tools/osdir.hh \
  Math/eigen3/COPYING.GPL \
  Math/eigen3/README.md

## Maths
nobase_pkginclude_HEADERS += \
  Math/Matrices.hh \
  Math/Vector3.hh \
  Math/VectorN.hh \
  Math/MatrixN.hh \
  Math/MathConstants.hh \
  Math/Vectors.hh \
  Math/LorentzTrans.hh \
  Math/Matrix3.hh \
  Math/MathUtils.hh \
  Math/Vector4.hh \
  Math/Math.hh \
  Math/Units.hh \
  Math/Constants.hh \
  Math/eigen3/Cholesky \
  Math/eigen3/Core \
  Math/eigen3/Dense \
  Math/eigen3/Eigenvalues \
  Math/eigen3/Geometry \
  Math/eigen3/Householder \
  Math/eigen3/Jacobi \
  Math/eigen3/LU \
  Math/eigen3/QR \
  Math/eigen3/src/Cholesky/LDLT.h \
  Math/eigen3/src/Cholesky/LLT.h \
  Math/eigen3/src/Core/arch/AltiVec/Complex.h \
  Math/eigen3/src/Core/arch/AltiVec/MathFunctions.h \
  Math/eigen3/src/Core/arch/AltiVec/PacketMath.h \
  Math/eigen3/src/Core/arch/AVX/Complex.h \
  Math/eigen3/src/Core/arch/AVX/MathFunctions.h \
  Math/eigen3/src/Core/arch/AVX/PacketMath.h \
  Math/eigen3/src/Core/arch/AVX/TypeCasting.h \
  Math/eigen3/src/Core/arch/AVX512/MathFunctions.h \
  Math/eigen3/src/Core/arch/AVX512/PacketMath.h \
  Math/eigen3/src/Core/arch/CUDA/Complex.h \
  Math/eigen3/src/Core/arch/CUDA/Half.h \
  Math/eigen3/src/Core/arch/CUDA/MathFunctions.h \
  Math/eigen3/src/Core/arch/CUDA/PacketMath.h \
  Math/eigen3/src/Core/arch/CUDA/PacketMathHalf.h \
  Math/eigen3/src/Core/arch/CUDA/TypeCasting.h \
  Math/eigen3/src/Core/arch/Default/Settings.h \
  Math/eigen3/src/Core/arch/NEON/Complex.h \
  Math/eigen3/src/Core/arch/NEON/MathFunctions.h \
  Math/eigen3/src/Core/arch/NEON/PacketMath.h \
  Math/eigen3/src/Core/arch/SSE/Complex.h \
  Math/eigen3/src/Core/arch/SSE/MathFunctions.h \
  Math/eigen3/src/Core/arch/SSE/PacketMath.h \
  Math/eigen3/src/Core/arch/SSE/TypeCasting.h \
  Math/eigen3/src/Core/arch/ZVector/Complex.h \
  Math/eigen3/src/Core/arch/ZVector/MathFunctions.h \
  Math/eigen3/src/Core/arch/ZVector/PacketMath.h \
  Math/eigen3/src/Core/Array.h \
  Math/eigen3/src/Core/ArrayBase.h \
  Math/eigen3/src/Core/ArrayWrapper.h \
  Math/eigen3/src/Core/Assign.h \
  Math/eigen3/src/Core/AssignEvaluator.h \
  Math/eigen3/src/Core/BandMatrix.h \
  Math/eigen3/src/Core/Block.h \
  Math/eigen3/src/Core/BooleanRedux.h \
  Math/eigen3/src/Core/CommaInitializer.h \
  Math/eigen3/src/Core/ConditionEstimator.h \
  Math/eigen3/src/Core/CoreEvaluators.h \
  Math/eigen3/src/Core/CoreIterators.h \
  Math/eigen3/src/Core/CwiseBinaryOp.h \
  Math/eigen3/src/Core/CwiseNullaryOp.h \
  Math/eigen3/src/Core/CwiseTernaryOp.h \
  Math/eigen3/src/Core/CwiseUnaryOp.h \
  Math/eigen3/src/Core/CwiseUnaryView.h \
  Math/eigen3/src/Core/DenseBase.h \
  Math/eigen3/src/Core/DenseCoeffsBase.h \
  Math/eigen3/src/Core/DenseStorage.h \
  Math/eigen3/src/Core/Diagonal.h \
  Math/eigen3/src/Core/DiagonalMatrix.h \
  Math/eigen3/src/Core/DiagonalProduct.h \
  Math/eigen3/src/Core/Dot.h \
  Math/eigen3/src/Core/EigenBase.h \
  Math/eigen3/src/Core/functors/AssignmentFunctors.h \
  Math/eigen3/src/Core/functors/BinaryFunctors.h \
  Math/eigen3/src/Core/functors/NullaryFunctors.h \
  Math/eigen3/src/Core/functors/StlFunctors.h \
  Math/eigen3/src/Core/functors/TernaryFunctors.h \
  Math/eigen3/src/Core/functors/UnaryFunctors.h \
  Math/eigen3/src/Core/Fuzzy.h \
  Math/eigen3/src/Core/GeneralProduct.h \
  Math/eigen3/src/Core/GenericPacketMath.h \
  Math/eigen3/src/Core/GlobalFunctions.h \
  Math/eigen3/src/Core/Inverse.h \
  Math/eigen3/src/Core/IO.h \
  Math/eigen3/src/Core/Map.h \
  Math/eigen3/src/Core/MapBase.h \
  Math/eigen3/src/Core/MathFunctions.h \
  Math/eigen3/src/Core/MathFunctionsImpl.h \
  Math/eigen3/src/Core/Matrix.h \
  Math/eigen3/src/Core/MatrixBase.h \
  Math/eigen3/src/Core/NestByValue.h \
  Math/eigen3/src/Core/NoAlias.h \
  Math/eigen3/src/Core/NumTraits.h \
  Math/eigen3/src/Core/PermutationMatrix.h \
  Math/eigen3/src/Core/PlainObjectBase.h \
  Math/eigen3/src/Core/Product.h \
  Math/eigen3/src/Core/ProductEvaluators.h \
  Math/eigen3/src/Core/products/GeneralBlockPanelKernel.h \
  Math/eigen3/src/Core/products/GeneralMatrixMatrix.h \
  Math/eigen3/src/Core/products/GeneralMatrixMatrixTriangular.h \
  Math/eigen3/src/Core/products/GeneralMatrixVector.h \
  Math/eigen3/src/Core/products/Parallelizer.h \
  Math/eigen3/src/Core/products/SelfadjointMatrixMatrix.h \
  Math/eigen3/src/Core/products/SelfadjointMatrixVector.h \
  Math/eigen3/src/Core/products/SelfadjointProduct.h \
  Math/eigen3/src/Core/products/SelfadjointRank2Update.h \
  Math/eigen3/src/Core/products/TriangularMatrixMatrix.h \
  Math/eigen3/src/Core/products/TriangularMatrixVector.h \
  Math/eigen3/src/Core/products/TriangularSolverMatrix.h \
  Math/eigen3/src/Core/products/TriangularSolverVector.h \
  Math/eigen3/src/Core/Random.h \
  Math/eigen3/src/Core/Redux.h \
  Math/eigen3/src/Core/Ref.h \
  Math/eigen3/src/Core/Replicate.h \
  Math/eigen3/src/Core/ReturnByValue.h \
  Math/eigen3/src/Core/Reverse.h \
  Math/eigen3/src/Core/Select.h \
  Math/eigen3/src/Core/SelfAdjointView.h \
  Math/eigen3/src/Core/SelfCwiseBinaryOp.h \
  Math/eigen3/src/Core/Solve.h \
  Math/eigen3/src/Core/SolverBase.h \
  Math/eigen3/src/Core/SolveTriangular.h \
  Math/eigen3/src/Core/StableNorm.h \
  Math/eigen3/src/Core/Stride.h \
  Math/eigen3/src/Core/Swap.h \
  Math/eigen3/src/Core/Transpose.h \
  Math/eigen3/src/Core/Transpositions.h \
  Math/eigen3/src/Core/TriangularMatrix.h \
  Math/eigen3/src/Core/util/BlasUtil.h \
  Math/eigen3/src/Core/util/Constants.h \
  Math/eigen3/src/Core/util/DisableStupidWarnings.h \
  Math/eigen3/src/Core/util/ForwardDeclarations.h \
  Math/eigen3/src/Core/util/Macros.h \
  Math/eigen3/src/Core/util/Memory.h \
  Math/eigen3/src/Core/util/Meta.h \
  Math/eigen3/src/Core/util/MKL_support.h \
  Math/eigen3/src/Core/util/NonMPL2.h \
  Math/eigen3/src/Core/util/ReenableStupidWarnings.h \
  Math/eigen3/src/Core/util/StaticAssert.h \
  Math/eigen3/src/Core/util/XprHelper.h \
  Math/eigen3/src/Core/VectorBlock.h \
  Math/eigen3/src/Core/VectorwiseOp.h \
  Math/eigen3/src/Core/Visitor.h \
  Math/eigen3/src/Eigenvalues/ComplexEigenSolver.h \
  Math/eigen3/src/Eigenvalues/ComplexSchur.h \
  Math/eigen3/src/Eigenvalues/EigenSolver.h \
  Math/eigen3/src/Eigenvalues/GeneralizedEigenSolver.h \
  Math/eigen3/src/Eigenvalues/GeneralizedSelfAdjointEigenSolver.h \
  Math/eigen3/src/Eigenvalues/HessenbergDecomposition.h \
  Math/eigen3/src/Eigenvalues/MatrixBaseEigenvalues.h \
  Math/eigen3/src/Eigenvalues/RealQZ.h \
  Math/eigen3/src/Eigenvalues/RealSchur.h \
  Math/eigen3/src/Eigenvalues/SelfAdjointEigenSolver.h \
  Math/eigen3/src/Eigenvalues/Tridiagonalization.h \
  Math/eigen3/src/Geometry/AlignedBox.h \
  Math/eigen3/src/Geometry/AngleAxis.h \
  Math/eigen3/src/Geometry/arch/Geometry_SSE.h \
  Math/eigen3/src/Geometry/EulerAngles.h \
  Math/eigen3/src/Geometry/Homogeneous.h \
  Math/eigen3/src/Geometry/Hyperplane.h \
  Math/eigen3/src/Geometry/OrthoMethods.h \
  Math/eigen3/src/Geometry/ParametrizedLine.h \
  Math/eigen3/src/Geometry/Quaternion.h \
  Math/eigen3/src/Geometry/Rotation2D.h \
  Math/eigen3/src/Geometry/RotationBase.h \
  Math/eigen3/src/Geometry/Scaling.h \
  Math/eigen3/src/Geometry/Transform.h \
  Math/eigen3/src/Geometry/Translation.h \
  Math/eigen3/src/Geometry/Umeyama.h \
  Math/eigen3/src/Householder/BlockHouseholder.h \
  Math/eigen3/src/Householder/Householder.h \
  Math/eigen3/src/Householder/HouseholderSequence.h \
  Math/eigen3/src/Jacobi/Jacobi.h \
  Math/eigen3/src/LU/arch/Inverse_SSE.h \
  Math/eigen3/src/LU/Determinant.h \
  Math/eigen3/src/LU/FullPivLU.h \
  Math/eigen3/src/LU/InverseImpl.h \
  Math/eigen3/src/LU/PartialPivLU.h \
  Math/eigen3/src/misc/Image.h \
  Math/eigen3/src/misc/Kernel.h \
  Math/eigen3/src/misc/RealSvd2x2.h \
  Math/eigen3/src/plugins/ArrayCwiseBinaryOps.h \
  Math/eigen3/src/plugins/ArrayCwiseUnaryOps.h \
  Math/eigen3/src/plugins/BlockMethods.h \
  Math/eigen3/src/plugins/CommonCwiseBinaryOps.h \
  Math/eigen3/src/plugins/CommonCwiseUnaryOps.h \
  Math/eigen3/src/plugins/MatrixCwiseBinaryOps.h \
  Math/eigen3/src/plugins/MatrixCwiseUnaryOps.h \
  Math/eigen3/src/QR/ColPivHouseholderQR.h \
  Math/eigen3/src/QR/CompleteOrthogonalDecomposition.h \
  Math/eigen3/src/QR/FullPivHouseholderQR.h \
  Math/eigen3/src/QR/HouseholderQR.h \
  Math/eigen3/src/SVD/BDCSVD.h \
  Math/eigen3/src/SVD/JacobiSVD.h \
  Math/eigen3/src/SVD/SVDBase.h \
  Math/eigen3/src/SVD/UpperBidiagonalization.h \
  Math/eigen3/SVD
